kubernetes-networks/canary/echo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
  namespace: canary-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
        - name: echo-app
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: echo-app
  namespace: canary-demo
  labels:
    app: echo-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: echo-app
