kubernetes-networks/canary/ingress-someapp-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: someapp
  namespace: canary-demo
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: X-Canary-Test
spec:
  rules:
  - http:
      paths:
      - path: /someapp
        backend:
          serviceName: echo-app
          servicePort: 80
