kubernetes-networks/canary/ingress-someapp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: someapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /someapp
            backend:
              serviceName: web-svc
              servicePort: 8000
